deploy/ss_deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: simple-server
  namespace: dev
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 5
  selector:
    matchLabels:
      app: simple-server
  template:
    metadata:
      labels:
        app: simple-server
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: simple-server
        image: quay.io/ruiramos/simple-server:v7
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /readyz
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 5
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 10
          failureThreshold: 2
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
