deploy/podinfo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  creationTimestamp: null
  name: podinfo
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: podinfo
          servicePort: 9898
        path: /podinfo
      - backend:
          serviceName: simple-server
          servicePort: 3000
        path: /simple-server        
status:
  loadBalancer: {}
